[package]
name = "fruitfly"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-sync = { version = "0.6.2", git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }
embassy-executor = { version = "0.7.0", git = "https://github.com/embassy-rs/embassy", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-futures = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy" }
embassy-time = { version = "0.4.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.4.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-usb = { version = "0.4.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }

dap-rs = { git = "https://github.com/bugadani/dap-rs", rev = "e9aa3c3", features = ["defmt"] }
bitbang-dap = { git = "https://github.com/bugadani/bitbang-dap", rev = "138717a", features = ["defmt"] }

cortex-m = "0.7.7"
defmt-rtt = "1.0.0"
panic-probe = "1.0.0"
defmt = "1.0.1"
cortex-m-rt = "0.7.5"
static_cell = "2.1.0"
portable-atomic = { version = "1.11", features = ["critical-section"] }
